--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -376,14 +376,14 @@ img {
 .img-3,
 .img-7,
 .img-9 {
-    height: 250px;
-    width: calc((100% - 10px) / 4);
+    height: calc((100svh - 10px) / 3.5);
+    width: calc((100svw - 10px) / 4);
 }
 
 .img-2,
 .img-8 {
-    height: 350px;
-    width: calc((100% - 10px) / 4);
+    height: calc((100svh - 10px) / 3);
+    width: calc((100svw - 10px) / 4);
 }
 
 
@@ -392,8 +392,8 @@ img {
 .img-4,
 .img-5,
 .img-6 {
-    height: 250px;
-    width: calc((100% - 10px) / 3);
+    height: calc((100svh - 10px) / 4);
+    width: calc((100svw - 10px) / 3);
 }
 
 .group-3 {
